PROJECT (vtkU3DExporterTest)
cmake_minimum_required(VERSION 2.6)

FIND_PACKAGE(VTK REQUIRED)
IF(NOT VTK_USE_RENDERING)
  MESSAGE(FATAL_ERROR "Example ${PROJECT_NAME} requires VTK_USE_RENDERING.")
ENDIF(NOT VTK_USE_RENDERING)
INCLUDE (${VTK_USE_FILE})

SET(Libraries vtkRendering vtkHybrid)

# IF(APPLE)
#   SET(EXECUTABLE_FLAG MACOSX_BUNDLE)
# ENDIF(APPLE)

FILE( GLOB IDTFGen_SRCS	RELATIVE ${CMAKE_SOURCE_DIR} IDTFGen/*.cpp	)
FILE( GLOB IDTFGen_HDRS	RELATIVE ${CMAKE_SOURCE_DIR} IDTFGen/*.h	)
SET_PROPERTY( SOURCE
	IDTFGen/IFXOSLoader.cpp
	PROPERTY COMPILE_DEFINITIONS U3DPluginsPath="Plugins" U3DCorePath="." )
SET( U3D_INCLUDE_DIR U3DInclude )
SET( IDTFGen_DIR IDTFGen )

ADD_DEFINITIONS( -DDEBUG -D_DEBUG )
INCLUDE_DIRECTORIES( ${IDTFGen_DIR} ${U3D_INCLUDE_DIR} )
ADD_EXECUTABLE(${PROJECT_NAME} ${EXECUTABLE_FLAG} ${PROJECT_NAME}.cxx vtkU3DExporter.cxx vtkU3DExporter.h ${IDTFGen_SRCS} ${IDTFGen_HDRS} )

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${Libraries})
